<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco_claro"
    tools:context=".atividades.turmas.GerenciarTurmaActivity">

    <FrameLayout
        android:id="@+id/frame_barra_superior"
        android:theme="@style/barraSuperiorVoltar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

    <ImageButton
        android:id="@id/btn_voltar"
        android:theme="@style/botaoVoltar"
        android:layout_width="50dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_gerenciar_turma"
        android:theme="@style/tituloDaPagina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_gerenciar_turma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frame_barra_superior" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_barra_superior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_voltar, frame_barra_superior,
        text_gerenciar_turma"></androidx.constraintlayout.widget.Group>

    <Button
        android:id="@+id/btn_convidar_estudante"
        android:theme="@style/botaoRoxo"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="120dp"
        android:text="@string/action_convidar_estudante"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />

    <Button
        android:id="@+id/btn_editar_turma"
        android:theme="@style/botaoRoxo"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_editar_turma"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_convidar_estudante" />

    <Button
        android:id="@+id/btn_retirar_estudante"
        android:theme="@style/botaoRoxo"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_retirar_estudante"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_editar_turma" />

    <Button
        android:id="@+id/btn_excluir_turma"
        android:theme="@style/botaoLaranja"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_excluir_turma"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_retirar_estudante" />

</androidx.constraintlayout.widget.ConstraintLayout>