<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco_claro"
    tools:context=".atividades.cadastroelogin.ConfirmarEmailActivity">

    <FrameLayout
        android:id="@+id/frame_barra_superior"
        android:theme="@style/barraSuperiorVoltar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <ImageButton
        android:id="@+id/btn_voltar"
        android:theme="@style/botaoVoltar"
        android:layout_width="50dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@id/group_barra_superior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="frame_barra_superior, text_confirmacao_email, btn_voltar" />

    <TextView
        android:id="@+id/text_confirmacao_email"
        android:theme="@style/tituloDaPagina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_confirmar_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frame_barra_superior" />

    <TextView
        android:id="@+id/text_instrucao1"
        android:theme="@style/textoRoxoLalezar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/msg_confirmar_email1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />

    <TextView
        android:id="@+id/text_instrucao2"
        android:theme="@style/textoRoxoLalezar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/msg_confirmar_email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instrucao1" />

    <RelativeLayout
        android:id="@+id/layout_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/btn_enviar">

        <TextView
            android:id="@+id/text_reenviar_email"
            android:layout_width="245dp"
            android:layout_height="28dp"
            android:text="@string/msg_reenviar_email"
            android:theme="@style/textoRoxoJosefin" />

        <TextView
            android:id="@+id/text_aqui"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_reenviar_email"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/action_aqui"
            android:theme="@style/textoLaranjaCAPS"
            tools:ignore="OnClick" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_enviar"
        android:theme="@style/botaoLaranja"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/action_enviar"
        android:textColor="@color/branco_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_codigo_confirmacao_input" />

    <EditText
        android:id="@+id/plain_text_codigo_confirmacao_input"
        android:theme="@style/campoDeTexto"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fundo_botao"
        android:hint="  código de confirmação"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instrucao2" />

</androidx.constraintlayout.widget.ConstraintLayout>