<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:background="@drawable/fundo_botao"
    android:padding="10dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_retirar_estudante1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_retirar_estudante1"
            android:theme="@style/tituloDoPopup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_retirar_estudante2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_retirar_estudante2"
            android:theme="@style/tituloDoPopup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_retirar_estudante1" />

        <ImageButton
            android:id="@+id/btn_fechar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="centerCrop"
            android:theme="@style/botaoFechar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/plain_text_nome_estudante_input"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/fundo_botao"
            android:backgroundTint="@color/branco_claro"
            android:hint="@string/msg_nome_estudante"
            android:textColor="@color/black"
            android:inputType="text"
            android:theme="@style/campoDeTexto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_retirar_estudante2" />

        <Button
            android:id="@+id/btn_retirar"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/action_retirar"
            android:textColor="@color/branco_claro"
            android:theme="@style/botaoLaranja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plain_text_nome_estudante_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>