<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco_claro"
    tools:context=".atividades.perfil.AlterarDadosEstudanteActivity">

    <FrameLayout
        android:id="@+id/frame_barra_superior"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:theme="@style/barraSuperiorVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

    <ImageButton
        android:id="@id/btn_voltar"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:theme="@style/botaoVoltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_alterar_dados_estudante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_alterar_dados"
        android:theme="@style/tituloDaPagina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frame_barra_superior" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_barra_superior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_voltar, frame_barra_superior,
        text_alterar_dados_estudante"></androidx.constraintlayout.widget.Group>

    <TextView
        android:id="@+id/text_nome_estudante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/msg_digitar_nome"
        android:theme="@style/textoRoxoLalezar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />

    <EditText
        android:id="@+id/plain_text_nome_input"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fundo_botao"
        android:hint="  nome"
        android:inputType="textPersonName"
        android:theme="@style/campoDeTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nome_estudante" />

    <TextView
        android:id="@+id/text_sobrenome_estudante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/msg_digitar_sobrenome"
        android:theme="@style/textoRoxoLalezar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_nome_input" />

    <EditText
        android:id="@+id/plain_text_sobrenome_input"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fundo_botao"
        android:hint="  sobrenome"
        android:inputType="textPersonName"
        android:theme="@style/campoDeTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sobrenome_estudante" />

    <TextView
        android:id="@+id/text_email_estudante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/msg_digitar_email"
        android:theme="@style/textoRoxoLalezar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_sobrenome_input" />

    <EditText
        android:id="@+id/plain_text_email_input"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fundo_botao"
        android:hint="  e-mail"
        android:inputType="textEmailAddress"
        android:theme="@style/campoDeTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_estudante" />

    <TextView
        android:id="@+id/text_senha_estudante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/msg_digitar_senha"
        android:theme="@style/textoRoxoLalezar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_email_input" />

    <EditText
        android:id="@+id/plain_text_senha_input"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fundo_botao"
        android:hint="  senha"
        android:inputType="textPassword"
        android:theme="@style/campoDeTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_senha_estudante" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/action_cancelar"
        android:textColor="@color/branco_claro"
        android:theme="@style/botaoLaranja"
        app:layout_constraintEnd_toStartOf="@+id/btn_salvar"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_senha_input" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/action_salvar"
        android:textColor="@color/branco_claro"
        android:theme="@style/botaoRoxo"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancelar" />

    <TextView
        android:id="@+id/text_excluir_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/action_excluir_conta"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:theme="@style/textoLaranjaCAPS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancelar" />

</androidx.constraintlayout.widget.ConstraintLayout>