<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco_claro"
    tools:context=".atividades.cadastroelogin.PaginaCadastroActivity">

    <FrameLayout
        android:id="@+id/frame_barra_superior"
        android:theme="@style/barraSuperiorVoltar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <ImageButton
        android:id="@+id/btn_voltar"
        android:theme="@style/botaoVoltar"
        android:layout_width="50dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_pagina_cadastro"
        android:theme="@style/tituloDaPagina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_pagina_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frame_barra_superior" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_barra_superior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_voltar, frame_barra_superior,
        text_pagina_cadastro"></androidx.constraintlayout.widget.Group>

    <Button
        android:id="@+id/btn_sou_estudante"
        android:theme="@style/botaoBranco"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_sou_estudante"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tipo_de_conta" />

    <Button
        android:id="@+id/btn_sou_professor"
        android:theme="@style/botaoBranco"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_sou_professor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sou_estudante" />

    <TextView
        android:id="@+id/text_tipo_de_conta"
        android:theme="@style/textoRoxoLalezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/msg_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_selecao_tipo_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_tipo_de_conta,btn_sou_estudante,btn_sou_professor" />

</androidx.constraintlayout.widget.ConstraintLayout>